--- a/pages/books/search.wxml
+++ b/pages/books/search.wxml
@@ -3,6 +3,7 @@
   <view slot="content">贝壳小盒子 - 图书检索</view>
 </cu-custom>
 
+<!-- 关键字检索 -->
 <view class="padding-lr-sm bg-white margin shadow radius padding-bottom">
   <view class="padding-top">
     <text class="cuIcon-titles text-green"></text>馆藏图书检索
@@ -10,8 +11,7 @@
   <view class="cu-bar bg-white search">
     <view class="search-form round">
       <text class="cuIcon-search"></text>
-      <input type="text" placeholder="输入要检索的图书关键词" confirm-type="search" bindinput="keywordInput"
-        bindconfirm="searchBook" auto-focus="true"></input>
+      <input type="text" placeholder="输入要检索的图书关键词" confirm-type="search" bindinput="keywordInput" bindconfirm="searchBook" auto-focus="true"></input>
     </view>
   </view>
   <radio-group class="block" bindchange="radioChange">
@@ -24,20 +24,22 @@
   </radio-group>
 </view>
 
-
+<!-- 热门关键字 -->
 <view class="padding-lr-sm bg-white margin shadow radius padding-bottom" wx:if="{{hotwords.length > 0}}">
   <view class="padding-tb"><text class="cuIcon-titles text-green"></text>热门检索关键词</view>
   <view class="bg-white">
+    <navigator url="../books/shelf?shelfType=personal&title=储物柜&id=0000000742" class="cu-tag round margin-lr margin-tb-xs">储物柜</navigator>
     <navigator url="../books/index?type=02&keyword={{item}}" class="cu-tag round margin-lr margin-tb-xs" wx:for="{{hotwords}}" wx:key="hotkey">{{item}}</navigator>
   </view>
 </view>
 
+<!-- 图书类目 -->
 <view class="padding-lr-sm bg-white margin shadow radius padding-bottom" wx:if="{{shelfCatalog.length > 0}}">
   <view class="padding-tb"><text class="cuIcon-titles text-green"></text>学科图书类别导航</view>
   <view class="bg-white">
     <view wx:for="{{shelfCatalog}}" wx:key="catalog">
       <view class="padding-tb-xs padding-left"><text class="cuIcon-titles text-green"></text>{{item.title}}</view>
-      <navigator url="../books/shelf?shelfType=public&title={{citem.name}}&clc={{citem.clc}}&slc={{citem.slc}}" class="cu-tag line-wegreen margin-xs"  wx:for="{{item.data}}" wx:for-item="citem" wx:key="catalog">{{citem.title}}</navigator>
+      <navigator url="../books/shelf?shelfType=public&title={{citem.name}}&clc={{citem.clc}}&slc={{citem.slc}}" class="cu-tag line-wegreen margin-xs" wx:for="{{item.data}}" wx:for-item="citem" wx:key="catalog">{{citem.title}}</navigator>
     </view>
   </view>
 </view>
