--- a/pages/books/detail.wxml
+++ b/pages/books/detail.wxml
@@ -4,26 +4,6 @@
 
 <view class="page" wx:if="{{!isLoading}}">
 
-  <!-- 图书信息 -->
-  <view class="cu-list menu sm-border card-menu margin-top">
-    <view class="cu-item">
-      <view class="action">
-        <text class="cuIcon-title text-cyan"></text> 图书信息
-      </view>
-      <view class="action">
-        <text class="cuIcon-attentionfill line-cyan">{{jsonStr.viewedSum}}次</text>
-      </view>
-    </view>
-    <view class="cu-item" wx:for="{{jsonStr.bookInfo}}" wx:key="info" wx:if="{{item.value.length>0}}">
-      <view class="content" style="min-width:220rpx;">
-        <text class="text-grey">{{item.name}}</text>
-      </view>
-      <view class="action">
-        <text class="text-grey text-sm text-left">{{item.value}}</text>
-      </view>
-    </view>
-  </view>
-
   <!-- 馆藏借阅信息 -->
   <view class="cu-list menu sm-border card-menu margin-top margin-bottom">
     <view class="cu-item">
@@ -33,53 +13,136 @@
       <view class="action">
         <button class="cu-btn bg-cyan shadow" open-type="share"><text class="cuIcon-share"></text>分享
         </button>
+        <button bindtap="showCollectionChanged" class="cu-btn bg-white margin-left-xs"><text class="cuIcon-{{showCollection?'fold':'unfold'}}"></text></button>
       </view>
     </view>
-    <view class="cu-item" wx:for="{{jsonStr.collection}}" wx:key="collection">
-      <view class="content padding-sm" style="color: #8B99A3;">
-        <view class="flex padding-tb-xs" wx:for="{{item}}" wx:for-item="row" wx:key="row">
-          <block wx:if="{{row.title == '书刊状态'}}">
-            <view class="basis-xxs"><text>{{row.title}}: </text></view>
-            <view class="cu-capsule radius">
-              <view class="cu-tag line-{{row.value=='可借'?'cyan':'red'}}">
-                <text class="cuIcon-{{row.value=='可借'?'check':'close'}}"></text>
-              </view>
-              <view class="cu-tag bg-{{row.value=='可借'?'cyan':'red'}}">
-                {{row.value}}
-              </view>
-            </view>
-          </block>
-          <block wx:elif="{{row.title == '馆藏地' || row.title == '还书位置'}}">
-            <view class="basis-xxs"><text>{{row.title}}: </text></view>
-            <view class="cu-capsule radius" data-place="{{row.value}}" bindtap="goLibrary">
-              <view class="cu-tag line-grey">
-                <text class="cuIcon-locationfill"></text>
-              </view>
-              <view class="cu-tag bg-grey">
-                {{row.value}}
-              </view>
-            </view>
-          </block>
-          <block wx:elif="{{row.title == '索书号'}}">
-            <view class="basis-xxs"><text>{{row.title}}: </text></view>
-            <view class="cu-capsule radius">
-              <view class="cu-tag line-grey">
-                <text class="cuIcon-tag"></text>
-              </view>
-              <view class="cu-tag bg-grey">
-                {{row.value}}
-              </view>
-            </view>
-          </block>
-          <block wx:else>
-            <block wx:if="{{row.value.length>0}}">
+    <block wx:if="{{showCollection}}">
+      <view class="cu-item" wx:for="{{jsonStr.collection}}" wx:key="collection">
+        <view class="content padding-sm" style="color: #8B99A3;">
+          <view class="flex padding-tb-xs" wx:for="{{item}}" wx:for-item="row" wx:key="row" wx:if="{{row.value.length>0 && row.title.length>0}}">
+            <block wx:if="{{row.title == '书刊状态'}}">
               <view class="basis-xxs"><text>{{row.title}}: </text></view>
-              <view class="fbasis-llg">{{row.value}}</view>
+              <view class="cu-capsule radius">
+                <view class="cu-tag line-{{row.value=='可借'?'cyan':'red'}}">
+                  <text class="cuIcon-{{row.value=='可借'?'check':'close'}}"></text>
+                </view>
+                <view class="cu-tag bg-{{row.value=='可借'?'cyan':'red'}}">
+                  {{row.value}}
+                </view>
+              </view>
             </block>
-          </block>
+            <block wx:elif="{{row.title == '馆藏地' || row.title == '还书位置'}}">
+              <view class="basis-xxs"><text>{{row.title}}: </text></view>
+              <view class="cu-capsule radius" data-place="{{row.value}}" bindtap="goLibrary">
+                <view class="cu-tag line-grey">
+                  <text class="cuIcon-locationfill"></text>
+                </view>
+                <view class="cu-tag bg-grey">
+                  {{row.value}}
+                </view>
+              </view>
+            </block>
+            <block wx:elif="{{row.title == '索书号'}}">
+              <view class="basis-xxs"><text>{{row.title}}: </text></view>
+              <view class="cu-capsule radius">
+                <view class="cu-tag line-grey">
+                  <text class="cuIcon-tag"></text>
+                </view>
+                <view class="cu-tag bg-grey">
+                  {{row.value}}
+                </view>
+              </view>
+            </block>
+            <block wx:else>
+              <block wx:if="{{row.value.length>0 && row.title.length>0}}">
+                <view class="basis-xxs"><text>{{row.title}}: </text></view>
+                <view class="fbasis-llg">{{row.value}}</view>
+              </block>
+            </block>
+          </view>
         </view>
       </view>
+    </block>
+  </view>
+
+  <!-- 社科馆图书分布 -->
+  <view class="cu-list menu sm-border card-menu margin-top margin-bottom" wx:if="{{placeType==0}}">
+    <view class="cu-item">
+      <view class="action">
+        <text class="cuIcon-title text-cyan"></text> 社科馆图书馆藏分布
+      </view>
+      <view class="action padding" bindtap="distributionChanged">
+        <text class="cuIcon-{{showDistribution?'fold':'unfold'}}"></text>
+      </view>
     </view>
+    <block wx:if="{{showDistribution}}">
+      <view class="bg-white">
+        <view class="{{item.infloor?'infloor':''}} flex flex-nowrap padding-xs margin-lr-xs bg-white radius solid-bottom" wx:for="{{socialDistribution}}" wx:key="index">
+          <view class="basis-xs padding-tb-xs text-center">
+            <view class="cu-tag line-cyan radius">{{item.floor}}</view>
+          </view>
+          <view class="padding-tb-xs text-left">{{item.desc}}</view>
+        </view>
+      </view>
+      <view class="bg-white padding-sm">
+        <view class="action">
+          <text class="cuIcon-title text-cyan"></text> 您要找的书"可能"位于边框选中的楼层或位置,也可能位于新书库，本识别结果仅供参考
+        </view>
+        <view class="action">
+        </view>
+      </view>
+    </block>
+  </view>
+  <!-- 理工馆图书分布 -->
+  <view class="cu-list menu sm-border card-menu margin-top margin-bottom" wx:if="{{placeType==1}}">
+    <view class="cu-item">
+      <view class="action">
+        <text class="cuIcon-title text-cyan"></text> 理工馆图书馆藏分布
+      </view>
+      <view class="action padding" bindtap="distributionChanged">
+        <text class="cuIcon-{{showDistribution?'fold':'unfold'}}"></text>
+      </view>
+    </view>
+    <block wx:if="{{showDistribution}}">
+      <view class="bg-white">
+        <view class="{{item.infloor?'infloor':''}} flex flex-nowrap padding-xs margin-lr-xs bg-white radius solid-bottom" wx:for="{{industryDistribution}}" wx:key="index">
+          <view class="basis-xs padding-tb-xs text-center">
+            <view class="cu-tag radius line-cyan">{{item.room}}室</view>
+          </view>
+          <view class="padding-tb-xs text-left">{{item.desc}}</view>
+        </view>
+      </view>
+      <view class="bg-white padding-sm">
+        <view class="action">
+          <text class="cuIcon-title text-cyan"></text> 您要找的书"可能"位于边框选中的位置,也可能位于新书库，本识别结果仅供参考
+        </view>
+        <view class="action">
+        </view>
+      </view>
+    </block>
+  </view>
+
+  <!-- 图书信息 -->
+  <view class="cu-list menu sm-border card-menu margin-top">
+    <view class="cu-item">
+      <view class="action">
+        <text class="cuIcon-title text-cyan"></text> 图书信息
+      </view>
+      <view class="action">
+        <text class="cuIcon-attentionfill line-cyan">{{jsonStr.viewedSum}}次</text>
+        <button bindtap="showBookInfoChanged" class="cu-btn bg-white margin-left-xs"><text class="cuIcon-{{showBookInfo?'fold':'unfold'}}"></text></button>
+      </view>
+    </view>
+    <block wx:if="{{showBookInfo}}">
+      <view class="cu-item" wx:for="{{jsonStr.bookInfo}}" wx:key="info" wx:if="{{item.value.length>0}}">
+        <view class="content" style="min-width:220rpx;">
+          <text class="text-grey">{{item.name}}</text>
+        </view>
+        <view class="action">
+          <text class="text-grey text-sm text-left">{{item.value}}</text>
+        </view>
+      </view>
+    </block>
   </view>
 
   <!-- 相关书架图书 -->
@@ -89,8 +152,7 @@
         <text class="cuIcon-title text-cyan"></text> 相关书架
       </view>
     </view>
-    <navigator url="./shelf?id={{item.id}}&title={{item.name}}" class="cu-item arrow" wx:for="{{jsonStr.relatedShelf}}"
-      wx:key="shelf">
+    <navigator url="./shelf?id={{item.id}}&title={{item.name}}" class="cu-item arrow" wx:for="{{jsonStr.relatedShelf}}" wx:key="shelf">
       <view class="content">
         <text class="cuIcon-goodsfavor text-cyan"></text>
         <text class="text-grey">{{item.name}}</text>
@@ -107,16 +169,21 @@
       <view class="action">
         <text class="cuIcon-title text-cyan"></text> 同名作者其他著作
       </view>
-    </view>
-    <navigator class="cu-item arrow" wx:for="{{jsonStr.sameAuthor}}" wx:for-item="sameAuthor"
-      url="./detail?code={{sameAuthor.marcNo}}" wx:key="author">
-      <view class="content padding-tb-sm text-cut">
-        <view>
-          <text class="cuIcon-read text-blue margin-right-xs"></text>{{sameAuthor.data[0].value}}</view>
-        <view class="text-gray text-sm">{{sameAuthor.data[1].value}} | {{sameAuthor.data[2].value}}</view>
+      <view class="action">
+        <button bindtap="showSameAuthorChanged" class="cu-btn bg-white"><text class="cuIcon-{{showSameAuthor?'fold':'unfold'}}"></text></button>
       </view>
-      <view class="action">{{sameAuthor.data[3].value}}</view>
-    </navigator>
+    </view>
+    <block wx:if="{{showSameAuthor}}">
+      <navigator class="cu-item arrow" wx:for="{{jsonStr.sameAuthor}}" wx:for-item="sameAuthor" url="./detail?code={{sameAuthor.marcNo}}" wx:key="author">
+        <view class="content padding-tb-sm text-cut">
+          <view>
+            <text class="cuIcon-read text-blue margin-right-xs"></text>{{sameAuthor.data[0].value}}
+          </view>
+          <view class="text-gray text-sm">{{sameAuthor.data[1].value}} | {{sameAuthor.data[2].value}}</view>
+        </view>
+        <view class="action">{{sameAuthor.data[3].value}}</view>
+      </navigator>
+    </block>
   </view>
 
   <!-- 其他相关资源 -->
