--- a/utils/iconfont.wxss
+++ b/utils/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'iconfont';  /* Project id 2595220 */
-  src: url('//at.alicdn.com/t/c/font_2595220_itg9ntift9o.woff2?t=1663163157542') format('woff2'),
-       url('//at.alicdn.com/t/c/font_2595220_itg9ntift9o.woff?t=1663163157542') format('woff'),
-       url('//at.alicdn.com/t/c/font_2595220_itg9ntift9o.ttf?t=1663163157542') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_2595220_3xvxbf06szk.woff2?t=1663261974578') format('woff2'),
+       url('//at.alicdn.com/t/c/font_2595220_3xvxbf06szk.woff?t=1663261974578') format('woff'),
+       url('//at.alicdn.com/t/c/font_2595220_3xvxbf06szk.ttf?t=1663261974578') format('truetype');
 }
 
 .iconfont {
@@ -123,4 +123,8 @@
 
 .icon-booksearch:before {
   content: "\eb58";
+}
+
+.icon-cabinet:before {
+  content: "\e77a";
 }
