--- a/pages/index/login.wxml
+++ b/pages/index/login.wxml
@@ -1,7 +1,7 @@
 <!--login.wxml-->
 <view class="container">
   <view class="remind-box" wx:if="{{remind}}">
-    <image class="remind-img" src="https://upload-images.jianshu.io/upload_images/4697920-65fe1e95184a027f.gif?imageMogr2/auto-orient/strip"></image>
+    <image class="remind-img" src="https://cdn.airmole.cn/static/bluecat_loading.gif?imageMogr2/auto-orient/strip"></image>
     <view class="text-white text-xl">正在登录，请耐心等候...</view>
     <view class="cu-progress bg-white round margin-top">
       <view class="bg-green" style="width:{{remind?(percent+'%'):''}};">{{percent}}%</view>
