--- a/pages/school/board/detail.wxml
+++ b/pages/school/board/detail.wxml
@@ -14,7 +14,7 @@
       <view class="cu-item shadow">
         <view class="cu-list menu-avatar">
           <view class="cu-item">
-            <view class="cu-avatar round lg bg-cyan" style="background-image:url(https://cdn.cardcat.cn/images/05b00e713b1e1cf190210daad49ec63b.png);"></view>
+            <view class="cu-avatar round lg bg-cyan" style="background-image:url(https://cdn.airmole.cn/static/quanyi_avatar.png);"></view>
             <view class="content flex-sub">
               <view>{{data.content.id}}</view>
               <view class="text-gray text-sm flex justify-between">{{data.content.created_at}}</view>
@@ -93,7 +93,7 @@
         <view class="cu-item shadow solid-bottom" wx:for="{{data.replay}}" wx:key="board">
           <view class="cu-list menu-avatar">
             <view class="cu-item">
-              <view class="cu-avatar round lg bg-cyan" style="background-image:url(https://upload-images.jianshu.io/upload_images/4697920-34dcb56de71f8967.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/128);"></view>
+              <view class="cu-avatar round lg bg-cyan" style="background-image:url(https://cdn.airmole.cn/static/quanyi_logo.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/128);"></view>
               <view class="content flex-sub">
                 <view>权益中心工作人员 - {{item.nickname}}</view>
                 <view class="text-gray text-sm flex justify-between">{{item.created_at}}</view>
