--- a/pages/school/run/index.wxml
+++ b/pages/school/run/index.wxml
@@ -4,7 +4,7 @@
     <view slot="content">步数排行 - 贝壳小盒子</view>
   </cu-custom>
 
-  <image class="image-width" src="https://gd-filems.dancf.com/mcm79j/mcm79j/51560/789140a2-ae2b-48bc-b679-eac7ae8495871762509.jpg" mode="widthFix" widthFix></image>
+  <image class="image-width" src="https://cdn.airmole.cn/static/werun_rank_top.jpeg" mode="widthFix" widthFix></image>
 
   <view class="bg-img" style="background-image: url({{fillImage}});margin-top: -5px;">
     <view class="padding-top-xs padding-lr-xl text-black">
@@ -46,7 +46,7 @@
     </view>
   </view>
 
-  <image class="image-width bottom-image" src="https://gd-filems.dancf.com/mcm79j/mcm79j/51560/7205d009-dc18-4c7f-8573-58500fa4df3e1785978.jpg" mode="widthFix" widthFix></image>
+  <image class="image-width bottom-image" src="https://cdn.airmole.cn/static/werun_rank_foot.jpeg" mode="widthFix" widthFix></image>
 
 
   <view style="height: 180rpx;" class="cu-bar bg-gradual-pink tabbar radius border shop foot" wx:if="{{personalRank[0]}}">
