优化补充资料页面

--- a/pages/index/feature.wxml
+++ b/pages/index/feature.wxml
@@ -6,7 +6,7 @@
       <navigator url="./setting" class="userinfo-avatar shadow-blur">
         <image src="{{ userInfo.avatarUrl || edusysUserInfo.avatar || defaultAvatar }}"></image>
       </navigator>
-      <navigator url="./setting" class="margin-top-sm nickname">{{ edusysUserInfo.nickname ? (edusysUserInfo.nickname + ' | ') : '点击授权昵称头像' }} {{ edusysUserInfo.uid}}</navigator>
+      <navigator url="./setting" class="margin-top-sm nickname">{{ userInfo.nickname ? (userInfo.nickname + ' | ') : '点击授权昵称头像' }} {{ edusysUserInfo.uid}}</navigator>
     </block>
     <view class="margin-top-sm nickname text-center" bindtap="goLogin" wx:else>
       <view>
