--- a/pages/school/board/edit.wxml
+++ b/pages/school/board/edit.wxml
@@ -1,5 +1,5 @@
 <!--pages/school/board/edit.wxml-->
-<block wx:if="{{env == 'release'}}">
+<block wx:if="{{env != 'release'}}">
 
   <cu-custom bgColor="bg-cyan" isCustom="{{true}}">
     <view slot="content">投诉维权信息</view>
@@ -8,7 +8,7 @@
 
     <!-- 填写表单内容 -->
     <view class="margin">
-    	<view class="cu-form-group margin-top radius-top" wx:if="{{!realted}}">
+      <view class="cu-form-group margin-top radius-top" wx:if="{{!realted && !reditid}}">
         <view class="title text-black">投诉问题类型</view>
         <picker bindchange="tagChange" value="{{tag}}" range="{{tags}}">
           <view class="picker text-black">
@@ -16,14 +16,50 @@
           </view>
         </picker>
       </view>
+      <!-- 食堂窗口 -->
+      <block wx:if="{{tag==1 && !realted && !reditid}}">
+        <view class="cu-form-group">
+          <view class="title text-black">维权食堂</view>
+          <picker bindchange="canteenChange" value="{{canteen}}" range="{{canteens}}">
+            <view class="picker text-black" style="text-align: center;">
+              {{canteen?canteens[canteen]:'点击选择食堂'}}
+            </view>
+          </picker>
+          <input name="place_room" bindinput="roomInput" placeholder=" 填写具体窗口" type="text" style="padding-left: 20rpx;"></input>
+        </view>
+      </block>
+      <!-- 宿舍 -->
+      <block wx:if="{{tag==2 && !realted && !reditid}}">
+        <view class="cu-form-group">
+          <view class="title text-black">宿舍</view>
+          <picker bindchange="dormitoryChange" value="{{dormitory}}" range="{{dormitories}}">
+            <view class="picker text-black" style="text-align: center;">
+              {{dormitory?dormitories[dormitory]:'点击选择宿舍'}}
+            </view>
+          </picker>
+          <input name="place_room" bindinput="roomInput" placeholder=" 填写房间号" type="text" style="padding-left: 20rpx;"></input>
+        </view>
+      </block>
+      <!-- 教学楼 -->
+      <block wx:if="{{tag==3 && !realted && !reditid}}">
+        <view class="cu-form-group">
+          <view class="title text-black">教学楼</view>
+          <picker bindchange="teachBuildingChange" value="{{teachBuilding}}" range="{{teachBuildings}}">
+            <view class="picker text-black" style="text-align: center;">
+              {{teachBuilding?teachBuildings[teachBuilding]:'点击选择教学楼'}}
+            </view>
+          </picker>
+          <input name="place_room" bindinput="roomInput" placeholder=" 填写教室号" type="text" style="padding-left: 20rpx;"></input>
+        </view>
+      </block>
       <!-- 联系方式 -->
-      <view class="cu-form-group" wx:if="{{!realted}}">
+      <view class="cu-form-group" wx:if="{{!realted && !reditid}}">
         <view class="title text-black">联系方式</view>
         <input name="concact" bindinput="mobileInput" placeholder="放心填写,仅工作人员可见" type="number"></input>
       </view>
       <!-- 投诉内容 -->
       <view class="cu-form-group {{realted ? 'margin-top radius-top' : ''}}">
-        <textarea style="color: black;" maxlength="500" bindinput="contentInput" placeholder="投诉维权内容详细说明"></textarea>
+        <textarea value="{{content}}" style="color: black;" maxlength="500" bindinput="contentInput" placeholder="投诉维权内容详细说明"></textarea>
       </view>
       <!-- 图片上传 -->
       <view class="cu-bar bg-white">
@@ -32,8 +68,7 @@
       </view>
       <view class="cu-form-group radius-bottom">
         <view class="grid col-4 grid-square flex-sub">
-          <view class="bg-img" wx:for="{{imgList}}" wx:for-index="pindex" wx:key="pindex" bindtap="previewImage"
-            data-url="{{imgList[pindex]}}">
+          <view class="bg-img" wx:for="{{imgList}}" wx:for-index="pindex" wx:key="pindex" bindtap="previewImage" data-url="{{imgList[pindex]}}">
             <image src="{{imgList[pindex]}}" mode='aspectFill'></image>
             <view class="cu-tag bg-red" catchtap="DelImg" data-index="{{pindex}}">
               <text class="cuIcon-close"></text>
@@ -52,5 +87,7 @@
   </view>
 </block>
 <block wx:else>
-  <view class="margin"><tips tipsText="应官方审核要求，此功能已下线"></tips></view>
+  <view class="margin">
+    <tips tipsText="应官方审核要求，此功能已下线"></tips>
+  </view>
 </block>
