--- a/pages/school/board/index.wxml
+++ b/pages/school/board/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/school/board/index.wxml-->
-  <block wx:if="{{env == 'release'}}">
+  <block wx:if="{{env != 'release'}}">
   <cu-custom bgColor="bg-cyan" isCustom="{{true}}">
     <view slot="content">投诉维权通道</view>
   </cu-custom>
@@ -80,7 +80,7 @@
     </view>
 
     <block wx:for="{{datalist.data}}" wx:key="board">
-      <navigator url="./detail?id={{item.id}}" class="cu-card dynamic">
+      <navigator url="./detail?id={{item.id}}&backpage={{datalist.pagination.current}}" class="cu-card dynamic">
         <view class="cu-item shadow">
           <view class="cu-list menu-avatar">
             <view class="cu-item">
@@ -96,6 +96,8 @@
             <view class="line-blue cu-tag radius">{{tags[item.tag]}}</view>
             <!-- 回复状态胶囊 -->
             <view class="line-{{item.status == 1 ? 'blue': 'red'}} cu-tag radius">{{item.status == 1 ? '已回复': '待回复'}}</view>
+            <!-- 解决状态胶囊 -->
+            <view class="line-{{item.resolve_status == 1 ? 'blue': 'red'}} cu-tag radius">{{item.resolve_status == 1 ? '已解决': '解决中'}}</view>
             {{item.content}}
           </view>
           <view class="grid flex-sub padding-lr padding-bottom col-3 grid-square">
