--- a/pages/school/lost/index.wxml
+++ b/pages/school/lost/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/school/lost/index.wxml-->
-<block wx:if="{{env != 'release'}}">
+<block wx:if="{{env == 'release'}}">
   <cu-custom bgColor="bg-cyan" isCustom="{{true}}">
     <view slot="content">{{title}}</view>
   </cu-custom>
